<resources>

    <!--ApplicationDescriptions-->
    <string name="app_name">Clear Skies Weather</string>
    <string name="home_fragment">Weather Dashboard</string>
    <string name="forecast_fragment">8 Day Forecast</string>
    <string name="settings_fragment">SettingsFragment</string>
    <string name="graph_fragment">GraphFragment</string>

    <!--OnBoarding-->
    <string name="on_boarding_text_intro">Welcome to Clear Skies… before you begin we would
        like to give you a quick introduction on how to use our app…</string>
    <string name="on_boarding_text_1">This icon will toggle on/off your phones internal sensors to show some weather data.</string>
    <string name="on_boarding_text_2">Other information shown will be downloaded from a regularly up dated database.</string>
    <string name="on_boarding_text_3">Click on a card in the list to display a graph of the data.</string>
    <string name="on_boarding_text_4">You can easily change the data shown by using the option at the bottom of the screen</string>
    <string name="on_boarding_text_5">The forecast will show the weather up to 8 days in advance.\n\nTo change your location use the button at the bottom center of the screen.\n\nYou can also reset back to your current location from here too.</string>

    <string name="on_boarding_firstly">Firstly…</string>
    <string name="on_boarding_next">Next…</string>
    <string name="on_boarding_finally">Finally…</string>


    <!--Buttons-->
    <string name="btn_text_home">Home</string>
    <string name="btn_text_forecast">Forecast</string>
    <string name="btn_text_settings">Settings</string>
    <string name="btn_text_skip">Skip</string>
    <string name="btn_text_continue">Continue…</string>
    <string name="btn_text_get_started">Get Started</string>
    <string name="btn_text_reset">Reset</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_ok">OK</string>
    <string name="btn_text_time_interval">Select time interval</string>

    <!--PlaceholderText-->

    <string name="placeholder_text_current_location">Current Location: Helsinki</string>
    <string name="placeholder_text_day_title">Today</string>
    <string name="placeholder_text_sensor_reading">20°C</string>
    <string name="placeholder_text_weather_condition">Sunny with Clear Skies</string>
    <string name="placeholder_text_select_start_date">select start date</string>
    <string name="placeholder_select_end_date">select end date</string>
    <string name="placeholder_text_toggle_phone_sensors">Toggle Phone Sensors</string>
    <string name="placeholder_text_select_data">Select your data to display</string>
    <string name="placeholder_reset_skip_on_boarding">Reset Skip On Boarding:</string>
    <string name="placeholder_is_loading">Loading…</string>

    <!--TooltipsText-->
    <string name="tooltip_text_toggle_phone_sensors">Toggle Display between phone sensors and weather API</string>
    <string name="tooltip_text_settings_menu">Change phone settings</string>


    <!--ContentDescriptions-->
    <string name="content_description_weather_image">Weather description Image</string>
    <string name="content_description_app_title">Clear Skies Title</string>
    <string name="content_description_home_screenshot">Screenshot of Home Screen</string>
    <string name="content_description_fab_btn">Change your current location</string>
    <string name="content_description_arrow_btn">Expand selection of sensors</string>
    <string name="content_description_rectangle_highlight">Rectangle Highlight</string>


    <!--SensorTypes-->
    <string name="sensor_temperature">Temperature</string>
    <string name="sensor_humidity">Humidity</string>
    <string name="sensor_light">Light</string>
    <string name="sensor_pressure">Pressure</string>
    <string name="sensor_absolute_humidity">Absolute Humidity</string>
    <string name="sensor_dew_point">Dew Point</string>
    <string name="sensor_uv_rating">UV Rating</string>
    <string name="sensor_wind">Wind</string>
    <string name="sensor_visibility">Visibility</string>
    <string name="sensor_sunrise">Sunrise</string>
    <string name="sensor_sunset">Sunset</string>

    <!--WeatherConditions-->
    <string name="weather_condition_thunderstorm">Thunderstorm</string>
    <string name="weather_condition_drizzle">Drizzle</string>
    <string name="weather_condition_rain">Rain</string>
    <string name="weather_condition_snow">Snow</string>
    <string name="weather_condition_mist">Mist</string>
    <string name="weather_condition_clear">Clear</string>
    <string name="weather_condition_clouds">Clouds</string>
    <string name="weather_condition_default">Default</string>

    <!--Error Messages-->
    <string name="error_no_weather_condition">No Weather Found</string>
    <string name="error_no_weather_reading">No Sensor Reading</string>
    <string name="error_max_character_reached">You have reached the maximum number of characters</string>
    <string name="error_location_not_found">Location was not found please try again.</string>
    <string name="error_no_address_found">No address found</string>
    <string name="error_geocoder_not_available">Geocoder is not available</string>

    <!--Dialog-->
    <string name="dialog_title">Change Current Location</string>
    <string name="dialog_input_hint">Enter city name</string>
    <string name="placeholder_currently_using_phone_sensors">Currently Using Phone Sensors</string>

</resources>