<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/blue_50"
        android:elevation="8dp"
        android:layout_margin="8dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/img_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/weather_cloudy"
                tools:layout_editor_absoluteX="50dp"
                android:contentDescription="@string/content_description_weather_image" />

            <LinearLayout
                android:id="@+id/layout_cardInfo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/black_transparent"
                android:elevation="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_dayName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:elevation="2dp"
                    android:text="@string/placeholder_text_day_title"
                    android:textColor="@color/white"
                    android:textSize="30sp" />


                <TextView
                    android:id="@+id/tv_weatherDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/placeholder_text_weather_condition"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>



    </com.google.android.material.card.MaterialCardView>


</layout>